Add Jest and tests for version-info

--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -3,3 +3,4 @@ meta(http-equiv='x-ua-compatible' content='ie=edge')
 title MDN Magellan
 meta(name='description' content='')
 meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+link(rel="stylesheet" type="text/css" href="./static/css/main.css" media="screen")
