--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ html
     include includes/head.pug
     body
     header
-      h1 MDN Megella
+      h1 MDN Megellan
       p Explore MDN Browser Compat Data
 
     main
@@ -52,4 +52,4 @@ html
       pre
         code(id="css_support_container")
 
-      include includes/footer.pug
+    include includes/footer.pug
